# ai-workflow-task-agent

./: .gitignore  Dockerfile  GEMINI.md  LICENSE  README.md  b_sub_r.py  browser.txt  commit_message_agent_simplification.txt  commit_message_readme_recreation.txt  docker-compose.yml  docker_compose.yml  lggraph.py  mcp_fix.json  mcp_multi_directory_example.json  package.json  pyproject.toml  requirement.txt  socket_concepts_explained.py  temmpwqq.py  test.py  tools.py
RAG_FILES/: neo4j_rag.py  rag.py
basic_logs/: error_log.txt  requirements.txt
copilot_instructions/: ENHANCED_LEARNING_FOCUSED_INSTRUCTIONS.md  ENHANCED_PIRATE_COPILOT_INSTRUCTIONS.md  PERSONAL_LEARNING_TUTOR_INSTRUCTIONS.md  this is answers of the quenstions.sty
examples/: demo_complete_system.py  demo_subprocess_logging.py  event_decorators.py  event_helpers.py  log_viewer_demo.py  mcp_fix.json  mcp_multi_directory_example.json  rich_status_event_demo.py
examples/event_listener/: Python_Event_Listener_Systems_Complete_Guide.md  README.md  event_helpers.py  event_listener.py  main.py  rich_status_listener.py
examples/langchain_example/: test.py
experimental/: chunk_debugger.py
experimental/gemini_style_cli/: autocomplete_demo.py  inline_suggestion_demo.py  simple_autocomplete_demo.py
reports/agent_improve/: hierarchical_agent_integration_report.md
src/: README.md  __init__.py  main_orchestrator.py
src/RAG/: README.md  __init__.py
src/agents/: README.md  agent_mode_node.py  chat_llm.py  classify_agent.py  node_factory.py  router.py  tool_selector.py
src/config/: .env.example  README.md  __init__.py  configure_logging.py  settings.py
src/core/: README.md  chat_destructor.py  chat_initializer.py
src/mcp/: README.md  dynamically_tool_register.py  load_config.py  manager.py  mcp_register_structure.py
src/models/: README.md  state.py
src/prompts/: README.md  __init__.py  agent_mode_prompts.py  open_ai_prompt.py  rag_prompts.py  rag_search_classifier_prompts.py  structured_triple_prompt.py  system_prompt_tool_selector.py  system_prompts.py  web_search_prompts.py
src/slash_commands/: README.md  executionar.py  on_run_time_register.py  parser.py  protocol.py  registry.py
src/system_logging/: README.md  adapter.py  dispatcher.py  formater.py  formatter.py  on_time_registry.py  protocol.py  registry.py  router.py
src/tools/: README.md  __init__.py
src/ui/: README.md  chatInputHandler.py  print_banner.py  print_history.py  print_message_style.py  rich_error_print.py
src/utils/: README.md  __init__.py  argument_schema_util.py  error_transfer.py  model_manager.py  open_ai_integration.py  rich_traceback_manager.py  socket_manager.py  structured_triple_prompt.py  timestamp_util.py
tests/: README.md  __init__.py  conftest.py  debug_circuit.py  debug_prompt_toolkit.py  deep_analysis_test.py  fix_test_imports.py  run_all_refactored_tests.py  run_tests.py  test_agent_mcp_real_fix.py  test_agent_mode_mcp_fix.py  test_agent_quick.py  test_api_error_handling.py  test_comprehensive_workflow.py  test_direct_logger.py  test_final_validation.py  test_handler_registration.py  test_log_file_path.py  test_mcp_config.py  test_mcp_fix.py  test_multiple_json_messages.py  test_prompt_toolkit_autocomplete.py  test_shell_command_fix.py  test_simple_mcp_fix.py  test_socket_connection.py  test_socket_debug.py  test_utils.py
tests/_legacy/: README.md
tests/api/: test_openai_integration.py
tests/browser_tool/: README.md  __init__.py  conftest.py  test_event_drivers_comprehensive.py  validate_browser_tests.py
tests/error_handling/: run_all_tests.py  test_error_routing.py  test_logging_system.py  test_socket_connection.py  test_socket_manager.py  test_subprocess_logging.py
tests/event_listener/: DESCRIPTOR_EXPLANATION.md  README_LISTENER_TESTS.md  quick_validation.py  run_listener_test.py  simple_listener_test.py  standalone_listener_test.py  test_descriptor_validation.py  test_event_listener_realistic.py  test_exit_flag_behavior.py  test_exit_listener_analysis.py  test_two_emit_exit_system.py
tests/integration/: HOW_TO_SEE_LOGS.md  test_lggraph_integration.py  test_workflow.py
tests/logging/: test_dispatcher.py  test_error_transfer.py  test_handlers.py
tests/mcp/: test_mcp_manager.py  test_universal_tool.py
tests/model_manager_tests/: README.md  __init__.py  test_error_handling.py  test_integration.py  test_model_loading.py  test_runner.py  test_singleton_behavior.py  test_thread_safety.py
tests/serialization/: README.md  run_serialization_tests.py  test_rich_serialization.py  test_socket_transmission.py
tests/slashcommands/: test_commands.py  test_executionar.py  test_full_flow.py  (+1 more)
utils/: __init__.py  error_transfer.py
(+90 files in other folders)
